Merged jetty-7-to-jetty-8-base-20090721-1
git-svn-id: svn+ssh://dev.eclipse.org/svnroot/rt/org.eclipse.jetty/jetty/branches/jetty-8@570 7e9141cc-0065-0410-87d8-b60c137991c4