@@ -14,6 +14,7 @@
 package org.eclipse.jetty.http;
 
 import java.io.IOException;
+import java.io.InterruptedIOException;
 
 import org.eclipse.jetty.io.Buffer;
 import org.eclipse.jetty.io.BufferUtil;
@@ -41,7 +42,7 @@ public class HttpGenerator extends AbstractGenerator
         Buffer _schemeCode;
         Buffer _responseLine;
     }
-    private static Status[] __status = new Status[HttpStatus.MAX_CODE+1];
+    private static final Status[] __status = new Status[HttpStatus.MAX_CODE+1];
     static
     {
         int versionLength=HttpVersions.HTTP_1_1_BUFFER.length();
@@ -60,7 +61,7 @@ public class HttpGenerator extends AbstractGenerator
             bytes[versionLength+3]=(byte)('0'+(i%10));
             bytes[versionLength+4]=' ';
             for (int j=0;j<reason.length();j++)
-                bytes[versionLength+5+j]=(byte)reason.charAt(j);;
+                bytes[versionLength+5+j]=(byte)reason.charAt(j);
             bytes[versionLength+5+reason.length()]=HttpTokens.CARRIAGE_RETURN;
             bytes[versionLength+6+reason.length()]=HttpTokens.LINE_FEED;
             
@@ -82,18 +83,18 @@ public class HttpGenerator extends AbstractGenerator
     
     
     // common _content
-    private static byte[] LAST_CHUNK =
+    private static final byte[] LAST_CHUNK =
     { (byte) '0', (byte) '\015', (byte) '\012', (byte) '\015', (byte) '\012'};
-    private static byte[] CONTENT_LENGTH_0 = StringUtil.getBytes("Content-Length: 0\015\012");
-    private static byte[] CONNECTION_KEEP_ALIVE = StringUtil.getBytes("Connection: keep-alive\015\012");
-    private static byte[] CONNECTION_CLOSE = StringUtil.getBytes("Connection: close\015\012");
-    private static byte[] CONNECTION_ = StringUtil.getBytes("Connection: ");
-    private static byte[] CRLF = StringUtil.getBytes("\015\012");
-    private static byte[] TRANSFER_ENCODING_CHUNKED = StringUtil.getBytes("Transfer-Encoding: chunked\015\012");
+    private static final byte[] CONTENT_LENGTH_0 = StringUtil.getBytes("Content-Length: 0\015\012");
+    private static final byte[] CONNECTION_KEEP_ALIVE = StringUtil.getBytes("Connection: keep-alive\015\012");
+    private static final byte[] CONNECTION_CLOSE = StringUtil.getBytes("Connection: close\015\012");
+    private static final byte[] CONNECTION_ = StringUtil.getBytes("Connection: ");
+    private static final byte[] CRLF = StringUtil.getBytes("\015\012");
+    private static final byte[] TRANSFER_ENCODING_CHUNKED = StringUtil.getBytes("Transfer-Encoding: chunked\015\012");
     private static byte[] SERVER = StringUtil.getBytes("Server: Jetty(7.0.x)\015\012");
 
     // other statics
-    private static int CHUNK_SPACE = 12;
+    private static final int CHUNK_SPACE = 12;
     
     public static void setServerVersion(String version)
     {
@@ -115,9 +116,9 @@ public class HttpGenerator extends AbstractGenerator
      * @param headerBufferSize Size of the buffer to allocate for HTTP header
      * @param contentBufferSize Size of the buffer to allocate for HTTP content
      */
-    public HttpGenerator(Buffers buffers, EndPoint io, int headerBufferSize, int contentBufferSize)
+    public HttpGenerator(Buffers buffers, EndPoint io)
     {
-        super(buffers,io,headerBufferSize,contentBufferSize);
+        super(buffers,io);
     }
 
     /* ------------------------------------------------------------------------------- */
@@ -188,7 +189,7 @@ public class HttpGenerator extends AbstractGenerator
         {
             // Yes - so we better check we have a buffer
             if (_buffer == null) 
-                _buffer = _buffers.getBuffer(_contentBufferSize);
+                _buffer = _buffers.getBuffer();
 
             // Copy _content to buffer;
             int len=_buffer.put(_content);
@@ -235,7 +236,7 @@ public class HttpGenerator extends AbstractGenerator
         
         if (_last || _state==STATE_END) 
         {
-            Log.debug("Ignoring extra content {}",new Byte(b));
+            Log.debug("Ignoring extra content {}",Byte.valueOf(b));
             return false;
         }
 
@@ -255,7 +256,7 @@ public class HttpGenerator extends AbstractGenerator
         
         // we better check we have a buffer
         if (_buffer == null) 
-            _buffer = _buffers.getBuffer(_contentBufferSize);
+            _buffer = _buffers.getBuffer();
         
         // Copy _content to buffer;
         _buffer.put(b);
@@ -288,7 +289,7 @@ public class HttpGenerator extends AbstractGenerator
 
         // we better check we have a buffer
         if (_buffer == null) 
-            _buffer = _buffers.getBuffer(_contentBufferSize);
+            _buffer = _buffers.getBuffer();
 
         _contentWritten-=_buffer.length();
         
@@ -303,8 +304,46 @@ public class HttpGenerator extends AbstractGenerator
     public boolean isBufferFull()
     {
         // Should we flush the buffers?
-        boolean full = super.isBufferFull() || _bufferChunked || _bypass  || (_contentLength == HttpTokens.CHUNKED_CONTENT && _buffer != null && _buffer.space() < CHUNK_SPACE);
-        return full;
+        return super.isBufferFull() || _bufferChunked || _bypass  || (_contentLength == HttpTokens.CHUNKED_CONTENT && _buffer != null && _buffer.space() < CHUNK_SPACE);
+    }
+
+    /* ------------------------------------------------------------ */
+    public void send1xx(int code) throws IOException
+    {
+        if (_state != STATE_HEADER) 
+            return;
+        
+        if (code<100||code>199)
+            throw new IllegalArgumentException("!1xx");
+        Status status=__status[code];
+        if (status==null)
+            throw new IllegalArgumentException(code+"?");
+        
+        // get a header buffer
+        if (_header == null) 
+            _header = _buffers.getHeader();
+        
+        _header.put(status._responseLine);
+        _header.put(HttpTokens.CRLF);
+        
+        try
+        {
+            // nasty semi busy flush!
+            while(_header.length()>0)
+            {
+                int len = _endp.flush(_header);
+                if (len<0)
+                    throw new EofException();
+                if (len==0)
+                    Thread.sleep(100);
+            }
+        }
+        catch(InterruptedException e)
+        {
+            Log.debug(e);
+            throw new InterruptedIOException(e.toString());
+        }
+        
     }
     
     /* ------------------------------------------------------------ */
@@ -323,7 +362,7 @@ public class HttpGenerator extends AbstractGenerator
 
         // get a header buffer
         if (_header == null) 
-            _header = _buffers.getBuffer(_headerBufferSize);
+            _header = _buffers.getHeader();
         
         boolean has_server = false;
         
@@ -683,7 +722,7 @@ public class HttpGenerator extends AbstractGenerator
             }
         }
         
-        if (!has_server && _status>100 && getSendServerVersion())
+        if (!has_server && _status>199 && getSendServerVersion())
             _header.put(SERVER);
 
         // end the header.
@@ -692,6 +731,8 @@ public class HttpGenerator extends AbstractGenerator
         _state = STATE_CONTENT;
 
     }
+    
+
 
     /* ------------------------------------------------------------ */
     /**
@@ -842,6 +883,7 @@ public class HttpGenerator extends AbstractGenerator
                     _bufferChunked = true;
 
                     // Did we leave space at the start of the buffer.
+                    //noinspection ConstantConditions
                     if (_buffer.getIndex() == CHUNK_SPACE)
                     {
                         // Oh yes, goodie! let's use it then!
